--- a/catalog.html
+++ b/catalog.html
@@ -129,18 +129,18 @@
 							<input class="sort-radio" type="radio" name="fatness" value="zero-percent" id="zero-percent">
 							<label class="radio-marg-first" for="zero-percent">0%</label>
 							<input class="sort-radio" type="radio" name="fatness" value="ten-percent" id="ten-percent" checked>
-							<label class="radio-marg-two" for="ten-percent">10%</label>
+							<label class="radio-marg-two" for="ten-percent">до 10%</label>
 							<input class="sort-radio" type="radio" name="fatness" value="thirty-percent" id="thirty-percent">
-							<label class="radio-marg-three" for="thirty-percent">30%</label>
+							<label class="radio-marg-three" for="thirty-percent">до 30%</label>
 							<input class="sort-radio" type="radio" name="fatness" value="morethirty-percent" id="morethirty-percent">
 							<label class="radio-marg-fore" for="morethirty-percent">выше 30%</label>
 						</fieldset>
 						<label class="sort sort-fillers">Наполнители:</label>
 						<fieldset class="sorting-fillers">
 							<input type="checkbox" name="chocolate"  id="chocolate" checked>
-							<label class="check-marg-first" for="chocolate">Шоколадные</label>
+							<label class="check-marg-first" for="chocolate">шоколадные</label>
 							<input type="checkbox" name="sugar-powder"  id="sugar-powder" checked>
-							<label class="check-marg-two" for="sugar-powder">Сахарные присыпки</label>
+							<label class="check-marg-two" for="sugar-powder">сахарные присыпки</label>
 							<input type="checkbox" name="fruit"  id="fruit">
 							<label class="check-marg-three" for="fruit">фрукты</label>
 							<input type="checkbox" name="syrups"  id="syrups">
@@ -156,7 +156,9 @@
 								<img src="img/orange.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 								<span class="price">310 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>
 						<div class="fourth">
@@ -164,7 +166,9 @@
 								<img src="img/coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
 								<span class="price">380 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочно-кофейное с кусочками шоколада</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+							</div>
 							</article>
 						</div>	
 						<div class="fourth">	
@@ -172,7 +176,9 @@
 								<img src="img/strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 								<span class="price">355 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочно-клубничное с присыпкой из белого шоколада</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>
 						<div class="fourth margin-none">		
@@ -180,7 +186,9 @@
 								<img src="img/creme-brulee.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
 								<span class="price">415 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочное крем-брюле с карамельной подливкой</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>
 						<div class="fourth">
@@ -188,7 +196,9 @@
 								<img src="img/cowberry.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
 								<span class="price">325 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочное с брусничным джемом</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>	
 						<div class="fourth">
@@ -196,7 +206,9 @@
 								<img src="img/bilberry.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники ">
 								<span class="price">410 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочно-черничное с цельными ягодами черники</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>
 						<div class="fourth">
@@ -204,7 +216,9 @@
 								<img src="img/lime.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
 								<span class="price">375 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочно-лимонное с карамельной присыпкой</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>
 						<div class="fourth margin-none">
@@ -212,7 +226,9 @@
 								<img src="img/chocolate.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
 								<span class="price">320 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочное с шоколадной стружкой</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>
 						<div class="fourth">
@@ -220,7 +236,9 @@
 								<img src="img/vanilla.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
 								<span class="price">440 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочно-ванильное с кусочками шоколада</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>
 						<div class="fourth">
@@ -228,7 +246,9 @@
 								<img src="img/menthol.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
 								<span class="price">435 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочноe с ментоловым сиропом</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>
 						<div class="fourth">		
@@ -236,7 +256,9 @@
 								<img src="img/black-chocolate.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
 								<span class="price">355 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочное с кусочками черного шоколада</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>
 						<div class="fourth margin-none">		
@@ -244,7 +266,9 @@
 								<img src="img/mint.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
 								<span class="price">420 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочное с мятным сиропом</span></a></p>
-								<a class="quick-view" href="#">Быстрый просмотр</a>
+								<div class="quick-view-wrap">
+									<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+								</div>
 							</article>
 						</div>	
 					</div>
@@ -258,7 +282,7 @@
 						<a  class="forward" href="#">вперед</a>
 					</div>
 				</main>
-				<footer class="main-footer">
+				<footer class="main-footer footer-catalog">
 					<section class="footer-social">
 						<h3>social</h3>
 						<a class="social social-tw" href="https://twitter.com/?lang=ru" target="_blank">Твитер</a>
