--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="radio" id="btn-3" name="toggle">			
 		<div class="site-wrapper">
 			<div class="content-wrapper">
-				<header class="main-header">
+				<header class="main-header header-catalog">
 				<nav class="main-navigation">
 					<a class="index-logo"><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
 					<ul>
@@ -56,7 +56,7 @@
 							</form>
 						</div>
 						<div class="basket-wrapper">
-							<a class="users basket" href="#">Пусто</a>
+							<a class="users basket" href="#">&#160;Пусто&#160;</a>
 						</div>	
 					</div>
 					<div class="user-info">
@@ -107,9 +107,11 @@
 					</section>	
 					<section class="index-content">
 						<h2>Хиты продаж</h2>
-						<article class="catalog-item hit">
+						<article class="catalog-item">
+							<div class="hit">
+							</div>
 							<img src="img/orange.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-							<span class="price">310 &#8381;/
+							<span class="price">310&#8381;/
 								<span class="units">кг</span>
 							</span>
 							<p><a class="purchase-link" href="#"><span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span></a></p>
@@ -117,29 +119,34 @@
 								<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
 							</div>
 						</article>
-						<article class="catalog-item hit">
+						<article class="catalog-item">
+							<div class="hit">
+							</div>
 							<img src="img/coffee.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-							<span class="price">380 &#8381;/<span class="units">кг</span></span>
+							<span class="price">380&#8381;/<span class="units">кг</span></span>
 							<p><a class="purchase-link" href="#"><span>Сливочно-кофейное с кусочками шоколада</span></a></p>
 							<div class="quick-view-wrap">
 								<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
 							</div>
 						</article>
-						<article class="catalog-item hit">
+						<article class="catalog-item">
+							<div class="hit">
+							</div>
 							<img src="img/strawberry.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-							<span class="price">355 &#8381;/<span class="units">кг</span></span>
+							<span class="price">355&#8381;/<span class="units">кг</span></span>
 							<p><a class="purchase-link" href="#"><span>Сливочно-клубничное с присыпкой из белого шоколада</span></a></p>
 							<div class="quick-view-wrap">
 								<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
 							</div>
 						</article>
-						<article class="catalog-item hit">
-							<img src="img/creme-brulee.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-							<span class="price">415 &#8381;/<span class="units">кг</span></span>
-							<p><a class="purchase-link" href="#"><span>Сливочное крем-брюле с карамельной подливкой</span></a></p>
-							<div class="quick-view-wrap">
-								<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+						<article class="catalog-item">
+							<div class="hit">
 							</div>
+							<img src="img/creme-brulee.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+							<span class="price">415&#8381;/<span class="units">кг</span></span>
+							<p><a class="purchase-link" href="#"><span>Сливочное крем-брюле с карамельной подливкой</span></a></p>
+							<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
+							
 						</article>
 						</section>	
 						<section class="our-production" >
@@ -159,14 +166,15 @@
 							<h3>BLOG</h3>
 							<div class="blog-info">
 								<p>Новое в нашем блоге</p>
-								<a href="#">10  способов сервировки фруктовых щербетов к столу</a>
+								<a href="#">10 &#160;способов сервировки фруктовых щербетов к столу</a>
 							</div>
 							<div class="blog-wrapper">
 							</div>
 							<div class="blog-form">
 								<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
 								<form class="news-form" action="https://echo.htmlacademy.ru" method="post">
-									<input type="email" name="email"  placeholder="Электронная почта">
+									<input class="enter-email-blog" type="email" name="email"  id="email-blog">
+									<label class="label-email-blog" for="email-blog">Электронная почта</label>
 									<button class="btn" type="submit">Отправить</button>
 								</form>
 							</div>
@@ -177,7 +185,8 @@
 						<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124054!2d30.320894616195037!3d59.9387968690478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sgr!4v1468565893571" 
 						width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>-->
 						<div class="our-adress">
-							<p>Адрес главного офиса<br>и офлайн магазина:</p>
+							<p>Адрес главного офиса<br>
+							и офлайн магазина:</p>
 							<p><b>ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</b></p>
 							<p>Для заказов по телефону:</p>
 							<p><a href="tel:8812450-25-25"><b>8 812 450-25-25</b></a></p>
