--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<nav class="main-navigation">
 					<a class="index-logo"><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
 					<ul>
-						<li class="first-menu one-units"><a href="#"><span class="menu-link">Каталог</span></a>
+						<li class="first-menu one-units"><a class="menu-link" href="#">Каталог</a>
 							<ul class="sub-menu">
 								<li><a href="#">Новинки</a></li>
 								<li><a href="catalog.html">Сливочное</a></li>
@@ -26,8 +26,8 @@
 								<li><a href="#">Мелорин</a></li>
 							</ul>
 						</li>				
-						<li class="first-menu two-units"><a href="#"><span class="menu-link">Доставка и оплата</span></a></li>
-						<li class="first-menu three-units"><a href="#"><span class="menu-link">О Компании</span></a></li>
+						<li class="first-menu two-units"><a class="menu-link" href="#">Доставка и оплата</a></li>
+						<li class="first-menu three-units"><a class="menu-link" href="#">О Компании</a></li>
 					</ul>
 				</nav>
 				<div class="second-block">
@@ -146,44 +146,41 @@
 							<span class="price">415&#8381;/<span class="units">кг</span></span>
 							<p><a class="purchase-link" href="#"><span>Сливочное крем-брюле с карамельной подливкой</span></a></p>
 							<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
-							
 						</article>
-						</section>	
-						<section class="our-production" >
-							<h2>Магазин Глейси   &nbsp;— это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
-							<div class="production-wrapper">
-								<div class="production-item">
-									<p class="ice-paragraph">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-									<p class="sheet-paragraph">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p> 
-								</div>
-								<div class="production-item">
+					</section>	
+					<section class="our-production" >
+						<h2>Магазин Глейси   &nbsp;— это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
+						<div class="production-wrapper">
+							<div class="production-item">
+								<p class="ice-paragraph">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+								<p class="sheet-paragraph">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p> 
+							</div>
+							<div class="production-item">
 								<p class="cow-paragraph">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 								<p class="thermometr-paragraph">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-								</div>
 							</div>
-						</section>
-						<section class="blog ">
-							<h3>BLOG</h3>
-							<div class="blog-info">
-								<p>Новое в нашем блоге</p>
-								<a href="#">10 &#160;способов сервировки фруктовых щербетов к столу</a>
-							</div>
-							<div class="blog-wrapper">
-							</div>
-							<div class="blog-form">
-								<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
-								<form class="news-form" action="https://echo.htmlacademy.ru" method="post">
-									<input class="enter-email-blog" type="email" name="email"  id="email-blog">
-									<label class="label-email-blog" for="email-blog">Электронная почта</label>
-									<button class="btn" type="submit">Отправить</button>
-								</form>
-							</div>
-						</section>
+						</div>
+					</section>
+					<section class="blog ">
+						<h3>BLOG</h3>
+						<div class="blog-info">
+							<p>Новое в нашем блоге</p>
+							<a href="#">10 &#160;способов сервировки фруктовых щербетов к столу</a>
+						</div>
+						<div class="blog-wrapper">
+						</div>
+						<div class="blog-form">
+							<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
+							<form class="news-form" action="https://echo.htmlacademy.ru" method="post">
+								<input class="enter-email-blog" type="email" name="email"  id="email-blog">
+								<label class="label-email-blog" for="email-blog">Электронная почта</label>
+								<button class="btn" type="submit">Отправить</button>
+							</form>
+						</div>
+					</section>
 					<section class="about-us">
 						<h3>about-us</h3>
 						<img src="img/map.jpg" width="1200" height="430" alt="MAP">
-						<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124054!2d30.320894616195037!3d59.9387968690478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sgr!4v1468565893571" 
-						width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>-->
 						<div class="our-adress">
 							<p>Адрес главного офиса<br>
 							и офлайн магазина:</p>
@@ -195,6 +192,21 @@
 						</div>
 					</section>
 				</main>
+				<div class="modal-wrapper">
+				 	<div class="modal-content">
+				  	<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+					  <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+							<b>Мы обязательно вам ответим!</b>
+							<input class="modal-name" type="text" id="name" name="name">
+							<label for="name">Как вас зовут?</label>
+							<input class="modal-email" type="email" id="email-adress" name="email">
+							<label for="email-adress">Ваша почта для ответа?</label>
+							<textarea  class="modal-suggestions" id="suggestions" name="suggestions"></textarea>
+							<label for="suggestions">Напишите что нибудь</label>
+							<input type="submit" name="submit" value="Отправить">
+						</form>
+					</div>	
+				</div>
 				<footer class="main-footer">
 					<section class="footer-social">
 						<h3>social</h3>
@@ -207,7 +219,7 @@
 						<a class="doc-item for-suppliers" href="#"><span>Для поставщиков</span></a>
 						<a class="doc-item about-production" href="#"><span>О производстве</span></a>
 						<a class="doc-item our-documents" href="#"><span>Наши документы</span></a>
-						<a class="doc-item environmental-standards" href="#"><span>Экологические стандарты<span></a>
+						<a class="doc-item environmental-standards" href="#"><span>Экологические стандарты</span></a>
 					</div>
 					<div class="copyright">
 						<a class="btn" href="https://htmlacademy.ru"><img src="img/html_academy.png" width="108" height="38" alt="HTML Academy"></a>
