--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
 					<nav class="main-navigation">
 						<a class="index-logo" href="index.html"><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
 						<ul>
-							<li class="first-menu one-units active"><a><span class="menu-link">Каталог</span></a>
+							<li class="first-menu one-units active"><a class="menu-link">Каталог</a>
 								<ul class="sub-menu">
 									<li><a href="#">Новинки</a></li>
 									<li><a>Сливочное</a></li>
@@ -23,8 +23,8 @@
 									<li><a href="#">Мелорин</a></li>
 								</ul>
 							</li>				
-							<li class="first-menu two-units"><a href="#"><span class="menu-link">Доставка и оплата</span></a></li>
-							<li class="first-menu three-units"><a href="#"><span class="menu-link">О Компании</span></a></li>
+							<li class="first-menu two-units"><a class="menu-link" href="#">Доставка и оплата</a></li>
+							<li class="first-menu three-units"><a class="menu-link" href="#">О Компании</a></li>
 						</ul>
 					</nav>
 					<div class="second-block">
@@ -114,7 +114,7 @@
 								</div>
 								<div class="range-controls">
 									<div class="scale">
-										<div class="bar" style="margin-left: 40%; width: 30%">
+										<div class="bar">
 										</div>
 									</div>
 									<div class="toggle toggle-min">
@@ -272,15 +272,15 @@
 							</article>
 						</div>	
 					</div>
-					<div class="page-number">
-						<a class="back"  href="#">назад</a>
-						<a class="number active-number">1</a>
-						<a class="number number-two" href="#">2</a>	
-						<a class="number number-three" href="#">3</a>
-						<a class="number number-fore" href="#">4</a>
-						<a class="number number-five" href="#">5</a>
-						<a  class="forward" href="#">вперед</a>
-					</div>
+					<ul class="page-number">
+						<li class="back-wrapper"><a class="back"  href="#">назад</a></li>
+						<li><a class="number active-number" disabled>1</a></li>
+						<li><a class="number number-two" href="#">2</a></li>	
+						<li><a class="number number-three" href="#">3</a></li>
+						<li><a class="number number-fore" href="#">4</a></li>
+						<li><a class="number number-five" href="#">5</a><li>
+						<li class="forward-wrapper"><a  class="forward" href="#">вперед</a></li>
+					</ul>
 				</main>
 				<footer class="main-footer footer-catalog">
 					<section class="footer-social">
@@ -294,7 +294,7 @@
 						<a class="doc-item for-suppliers" href="#"><span>Для поставщиков</span></a>
 						<a class="doc-item about-production" href="#"><span>О производстве</span></a>
 						<a class="doc-item our-documents" href="#"><span>Наши документы</span></a>
-						<a class="doc-item environmental-standards" href="#"><span>Экологические стандарты<span></a>
+						<a class="doc-item environmental-standards" href="#"><span>Экологические стандарты</span></a>
 					</div>
 					<div class="copyright">
 						<a class="btn" href="https://htmlacademy.ru"><img src="img/html_academy.png" width="108" height="38" alt="HTML Academy"></a>
